[package]
name = "connector-sdk"
version = "0.2.2"
edition = "2021"
authors = ["Korbinian Flietel"]
license = "MIT OR Apache-2.0"

description = "A SDK to communicate with an enmeshed connector"
repository = "https://github.com/kojofl/connector-sdk"


keywords = ["enmeshed"]

[dependencies]
reqwest = { version = "0.11.13", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
serde_urlencoded = "0.7.1"
chrono = { version = "0.4.23", features = ["serde"] }
ureq = { version = "^2.9.7", features = ["json"], optional = true }

[dev-dependencies]
actix-rt = "2.7.0"

[features]
blocking = ["dep:ureq"]
